--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.2"
   },
   "devDependencies": {
+    "@types/node": "^20.14.11",
     "prettier": "^3.3.3",
     "tsup": "^8.1.2",
     "typescript": "^5.5.3",
